<resources>
    <string name="app_name">Food</string>
    <string name="emailhint">E-Mail</string>
    <string name="passhint">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="name">Ad-Soyad</string>
    <string name="age">Yaş</string>
    <string name="passvalidation">Şifreyi Onayla</string>
    <string name="forgotpass">Şifremi Yenile</string>
    <string name="title_activity_q">q</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_gallery">Profil</string>
    <string name="menu_slideshow">Tariflerim</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
</resources>