<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    android:background="@color/bgactivity"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/activity_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="17sp"
        android:textColor="@color/textcolor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/activity_register_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="17sp"
        android:textColor="@color/textcolor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/activity_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailhint"
        android:textSize="17sp"
        android:textColor="@color/textcolor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/activity_register_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passhint"
        android:textSize="17sp"
        android:textColor="@color/textcolor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/activity_register_passValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passvalidation"
        android:textSize="17sp"
        android:textColor="@color/textcolor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/activity_main_register"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/btntextcolor"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custombutton"
        android:onClick="Register"
        />

</LinearLayout>