<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beerbg"
    android:clickable="false"
    tools:context=".activities.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/gray" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/activity_main_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawableLeft="@drawable/custom_email_icon"
        android:drawablePadding="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/textcolor" />
    <EditText
        android:id="@+id/activity_main_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_email"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_pass_icon"
        android:drawableLeft="@drawable/custom_pass_icon"
        android:drawablePadding="10dp"
        android:gravity="center_horizontal"
        android:hint="@string/passhint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/activity_main_checkbox"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_below="@+id/activity_main_pass"
        android:layout_alignEnd="@+id/activity_main_pass"
        android:layout_alignRight="@+id/activity_main_pass"
        android:background="@drawable/custom_input"
        android:gravity="center"
        android:text="Beni Hatırla"
        android:textColor="@color/btnbgcolor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/activity_main_btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_checkbox"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custombutton"
            android:onClick="Login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activity_main_register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/custombutton"
            android:onClick="Register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activity_main_forgotpass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/custombutton"
            android:text="Şifremi Unuttum"
            android:textAllCaps="false"
            android:textColor="@color/btntextcolor"
            android:textSize="17sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <CheckBox
        android:id="@+id/activity_main_Visiblepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_email"
        android:layout_alignEnd="@id/activity_main_email"
        android:layout_alignRight="@id/activity_main_email"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:button="@drawable/checkbox_background"
        android:checked="false" />

</RelativeLayout>